@@ -25,10 +25,12 @@ run_tests(
         $client->set_prioritize(1);
 
         for ( 1 .. 10 ) {
+
+            # Postgres uses ORDER BY priority NULLS FIRST when DESC is used
             my $job = TheSchwartz::Job->new(
                 funcname => 'Worker::PriorityTest',
                 arg      => { num => $_ },
-                ( $_ == 1 ? () : ( priority => $_ ) ),
+                ( !$ENV{USE_PGSQL} && $_ == 1 ? () : ( priority => $_ ) ),
             );
             my $h = $client->insert($job);
             ok( $h, "inserted job (priority $_)" );
@@ -40,7 +42,11 @@ run_tests(
         Worker::PriorityTest->set_client($client);
 
         for ( 1 .. 10 ) {
-            $record_expected = 11 - $_ == 1 ? undef : 11 - $_;
+
+            # Postgres uses ORDER BY priority NULLS FIRST when DESC is used
+            $record_expected
+                = !$ENV{USE_PGSQL} && 11 - $_ == 1 ? undef : 11 - $_;
+
             my $rv = eval { $client->work_once; };
             ok( $rv, "did stuff" );
         }
