@@ -36,6 +36,9 @@ run_tests(
         $handle = $client->insert($job);
         ok( !$handle, 'no handle' );
 
+        # pg failes and marks the database as dead
+        $client->{retry_at} = {};
+
         # insert same uniqkey, but different func
         $job = TheSchwartz::Job->new(
             funcname => 'scratch',
